# wimdy

./: .gitignore  Cargo.toml  Trunk.toml  deploy.sh  flake.nix
migrations/: 20211020145746_create_target.sql
wimdy_frontend/: Cargo.toml  index.html
wimdy_frontend/src/: main.rs
wimdy_rocket/: Cargo.toml
wimdy_rocket/src/: main.rs
