[package]
name = "wimdy_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "9e764fb2b08760d0aceea558cf53980a9e4adc3f" }
wee_alloc = "0.4.5"

