[package]
name = "wimdy_rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.7"
juniper_rocket = "0.8.0"
rocket = "0.5.0-rc.1"
sqlx = { version = "0.5.9", features = ["sqlite", "runtime-tokio-rustls"] }
